--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "next": "12.0.10",
+    "papaparse": "^5.3.1",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
