--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.2",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.1",
     "next": "12.0.10",
     "papaparse": "^5.3.1",
     "prop-types": "^15.8.1",
