--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@popperjs/core": "^2.11.2",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
-    "moment": "^2.29.1",
-    "next": "12.0.10",
+    "moment": "^2.29.3",
+    "next": "^12.1.6",
     "papaparse": "^5.3.1",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
