--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
@@ -20,6 +21,8 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
     "sass": "^1.49.9"
   }
 }
